Fixing cropped icons in progress listing

--- a/app/assets/stylesheets/application/modules/_progress_listing.scss
+++ b/app/assets/stylesheets/application/modules/_progress_listing.scss
@@ -5,6 +5,6 @@
   list-style: none;
 
   .status-icon {
-    margin-right: 4px;
+    margin: 0 4px;
   }
 }
